# big-list-of-naughty-files

./: .codespellrc  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .pylintrc  README.md  blnf.py  pyproject.toml  template.py  tox.ini
requirements/: local.txt  requirements.txt
src/blnf/: blnf.py  blns.txt
src/template/: template.py
tests/: test_main.py
